--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                                     Accueil
                                 </a>
                                 <div class="right menu">
-                                    <a class="item" href="./portfolio/projets/1">
+                                    <a class="item" href="/projets.html">
                                         Projets
                                     </a>
                                     <a class="item" href="/competences.html">
                                         Compétences
                                     </a>
-                                    <a class="item" href="./portfolio/veille">
+                                    <a class="item" href="/veille.html">
                                         Veille informationnelle
                                     </a>
                                 </div>
