--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="ui container">
                         <div class="ui segment">
                             <div class="ui secondary pointing menu">
-                                <a class="item" href="./portfolio/">
+                                <a class="item" href="/">
                                     Accueil
                                 </a>
                                 <div class="right menu">
