--- a/competences.html
+++ b/competences.html
@@ -20,17 +20,17 @@
                     <div class="ui container">
                         <div class="ui segment">
                             <div class="ui secondary pointing menu">
-                                <a class="item" href="./portfolio/">
+                                <a class="item" href="/">
                                     Accueil
                                 </a>
                                 <div class="right menu">
-                                    <a class="item" href="./portfolio/projets/1">
+                                    <a class="item" href="/projets.html">
                                         Projets
                                     </a>
-                                    <a class="item" href="./portfolio/competences">
+                                    <a class="item" href="/competences.html">
                                         Compétences
                                     </a>
-                                    <a class="item" href="./portfolio/veille">
+                                    <a class="item" href="/veille.html">
                                         Veille informationnelle
                                     </a>
                                 </div>
