--- a/projets.html
+++ b/projets.html
@@ -1,134 +1,216 @@
-{{> partials/header}}
-<div class="projetsContainer">
-    <div class="ui top attached tabular menu">
-        <a onclick="open1()" id="b1" class="item">
-            API
-        </a>
-        <a onclick="open2()" id="b2" class="item">
-            Archivage
-        </a>
-        <a id="b3" onclick="open3()" class="item">
-            RocketLinks
-        </a>
-        <a id="b4" onclick="open4()" class="item">
-            PlanitPokerStar
-        </a>
-        <a id="b5" onclick="open5()" class="item">
-            E-Music
-        </a>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+    </style>
+    <title>Levasseur Kilian</title>
+</head>
 
-    </div>
-    <div id="1" class="ui bottom attached segment">
-        <div class="detailsContainer">
-            <h2>Compétences Associés : </h2>
-            <ul>
-                <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :</li>
-                <ul>
-                    <li>- Traiter des demandes concernant les applications</li>
-                </ul>
+<div class="main-container">
+    <body>
+    <main>
+        <div id="app">
+            <header>
+                <div class="ui vertical masthead center aligned segment">
+                    <div class="ui container">
+                        <div class="ui segment">
+                            <div class="ui secondary pointing menu">
+                                <a class="item" href="/">
+                                    Accueil
+                                </a>
+                                <div class="right menu">
+                                    <a class="item" href="/projets.html">
+                                        Projets
+                                    </a>
+                                    <a class="item" href="/competences.html">
+                                        Compétences
+                                    </a>
+                                    <a class="item" href="/veille.html">
+                                        Veille informationnelle
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="projetsContainer">
+                <div class="ui top attached tabular menu">
+                    <a onclick="open1()" id="b1" class="item">
+                        API
+                    </a>
+                    <a onclick="open2()" id="b2" class="item">
+                        Archivage
+                    </a>
+                    <a id="b3" onclick="open3()" class="item">
+                        RocketLinks
+                    </a>
+                    <a id="b4" onclick="open4()" class="item">
+                        PlanitPokerStar
+                    </a>
+                    <a id="b5" onclick="open5()" class="item">
+                        E-Music
+                    </a>
 
-            </ul>
-        </div>
-        <div class="projetContainerData">
-            <div>
-                <h2>Présentation du projet :</h2>
-                <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'APIs pour l'entreprise Zaacom.</p>
-                <p>Développement des APIs WHOIS, Wayback, Majestic et Semrush</p>
-                <p>- L'API WHOIS sert à récupérer les informations d'un nom de domaine (date d’enregistrement, nom de la société, mail, adresse…)</p>
-                <p>- L'API Wayback sert à récupérer les captures d'écran d'un site web</p>
-                <p>- L'API Majestic sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
-                <p>- L'API Semrush sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
+                </div>
+                <div id="1" class="ui bottom attached segment">
+                    <div class="detailsContainer">
+                        <h2>Compétences Associés : </h2>
+                        <ul>
+                            <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :</li>
+                            <ul>
+                                <li>- Traiter des demandes concernant les applications</li>
+                            </ul>
+
+                        </ul>
+                    </div>
+                    <div class="projetContainerData">
+                        <div>
+                            <h2>Présentation du projet :</h2>
+                            <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'APIs pour l'entreprise Zaacom.</p>
+                            <p>Développement des APIs WHOIS, Wayback, Majestic et Semrush</p>
+                            <p>- L'API WHOIS sert à récupérer les informations d'un nom de domaine (date d’enregistrement, nom de la société, mail, adresse…)</p>
+                            <p>- L'API Wayback sert à récupérer les captures d'écran d'un site web</p>
+                            <p>- L'API Majestic sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
+                            <p>- L'API Semrush sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="2" class="ui bottom attached segment">
+                    <div class="detailsContainer">
+                        <h2>Compétences Associés : </h2>
+                        <ul>
+                            <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :
+                                <ul>
+                                    <li>- Traiter des demandes concernant les applications</li>
+                                </ul>
+                            </li>
+                            <li>Mettre à disposition des utilisateurs un service informatique:
+                                <ul>
+                                    <li>- Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="projetContainerData">
+                        <div>
+                            <h2>Présentation du projet :</h2>
+                            <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'un outils d'archivage de l'interface de site client pour l'entreprise Zaacom.</p>
+                            <p>L'outils a pour but de permettre l'analyse de l'évolution de l'interface d'un site web</p>
+                            <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration dans les apis Wayback et WHOIS afin de vérifier si elles effectuent bien leurs tâches étant donné que cet outils utilise ces deux apis</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="3" class="ui bottom attached segment">
+                    <div class="detailsContainer">
+                        <h2>Compétences Associés : </h2>
+                        <ul>
+                            <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :
+                                <ul>
+                                    <li>- Traiter des demandes concernant les applications</li>
+                                </ul>
+                            </li>
+                            <li>Mettre à disposition des utilisateurs un service informatique:
+                                <ul>
+                                    <li>- Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="projetContainerData">
+                        <div>
+                            <h2>Présentation du projet :</h2>
+                            <p>Projet réalisé durant le stage de 2eme année de BTS SIO consistant à réaliser le développement d'un outils de gestion de deal rocketlinks pour l'entreprise Zaacom.</p>
+                            <p>RocketLinks c'est la première plateforme d’achat / vente de liens et d’articles sponsorisés qui propose à ses clients près de 35 000 médias </p>
+                            <p>L'outils a pour but de permettre aux consultant SEO de gagner temps, afin qu'ils évitent de faire eux mêmes la gestion de leurs deals rocketlinks, et que se soit l'outils qui le fasse au leur place</p>
+                            <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="4" class="ui bottom attached segment">
+                    <h1>PlanitPokerStar</h1>
+                </div>
+                <div id="5" class="ui bottom attached segment">
+                    <div class="detailsContainer">
+                        <h2>Compétences Associés : </h2>
+                        <ul>
+                            <li>Travailler en mode projet :
+                                <ul>
+                                    <li>- Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                                    <li>- Planifier les activités</li>
+                                    <li>- Évaluer les indicateurs de suivi d’un projet et analyser les écarts</li>
+                                </ul>
+                            </li>
+                            <li>Développer la présence en ligne de l’organisation :
+                                <ul>
+                                    <li>- Participer à l’évolution d’un site Web exploitant les données de l’organisation</li>
+                                    <li>- Participer à la valorisation de l’image de l’organisation sur les médias numériques en tenant compte du cadre juridique et des enjeux économiques</li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="projetContainerData">
+                        <div>
+                            <h2>Présentation du projet :</h2>
+                            <p>Projet réalisé durant la 2ème année de BTS SIO consistant à réaliser le site d'une école de musique.</p>
+                            <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
+                            <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </main>
+    <footer>
+        <div class="ui inverted vertical footer segment">
+            <div class="ui container">
+                <div class="ui stackable inverted divided equal height stackable grid">
+                    <div class="three wide column">
+                        <h4>A propos</h4>
+                        <div class="ui inverted link list">
+                            <a class="item" href="#ecole-ancre">Notre École</a>
+                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
+                            <a class="item" href="">Rêgles & Confidentialités</a>
+                        </div>
+                    </div>
+                    <div class="three wide column">
+                        <h4>A propos</h4>
+                        <div class="ui inverted link list">
+                            <a class="item" href="#ecole-ancre">Notre École</a>
+                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
+                            <a class="item" href="">Rêgles & Confidentialités</a>
+                        </div>
+                    </div>
+                    <div class="seven wide column">
+                        <h4>E-Music</h4>
+                        <div class="ui list">
+                            <div class="item">Tous droits réservée.</div>
+                            <div class="item">Site Réalisés par Clément H</div>
+                            <div class="item">Co produit par Kilian L</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="2" class="ui bottom attached segment">
-        <div class="detailsContainer">
-            <h2>Compétences Associés : </h2>
-            <ul>
-                <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :
-                    <ul>
-                        <li>- Traiter des demandes concernant les applications</li>
-                    </ul>
-                </li>
-                <li>Mettre à disposition des utilisateurs un service informatique:
-                    <ul>
-                        <li>- Réaliser les tests d’intégration et d’acceptation d’un service</li>
-                    </ul>
-                </li>
-
-            </ul>
-        </div>
-        <div class="projetContainerData">
-            <div>
-                <h2>Présentation du projet :</h2>
-                <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'un outils d'archivage de l'interface de site client pour l'entreprise Zaacom.</p>
-                <p>L'outils a pour but de permettre l'analyse de l'évolution de l'interface d'un site web</p>
-                <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration dans les apis Wayback et WHOIS afin de vérifier si elles effectuent bien leurs tâches étant donné que cet outils utilise ces deux apis</p>
-            </div>
-        </div>
-    </div>
-    <div id="3" class="ui bottom attached segment">
-        <div class="detailsContainer">
-            <h2>Compétences Associés : </h2>
-            <ul>
-                <li>Répondre aux incidents et aux demandes d’assistance et d’évolution :
-                    <ul>
-                        <li>- Traiter des demandes concernant les applications</li>
-                    </ul>
-                </li>
-                <li>Mettre à disposition des utilisateurs un service informatique:
-                    <ul>
-                        <li>- Réaliser les tests d’intégration et d’acceptation d’un service</li>
-                    </ul>
-                </li>
-
-            </ul>
-        </div>
-        <div class="projetContainerData">
-            <div>
-                <h2>Présentation du projet :</h2>
-                <p>Projet réalisé durant le stage de 2eme année de BTS SIO consistant à réaliser le développement d'un outils de gestion de deal rocketlinks pour l'entreprise Zaacom.</p>
-                <p>RocketLinks c'est la première plateforme d’achat / vente de liens et d’articles sponsorisés qui propose à ses clients près de 35 000 médias </p>
-                <p>L'outils a pour but de permettre aux consultant SEO de gagner temps, afin qu'ils évitent de faire eux mêmes la gestion de leurs deals rocketlinks, et que se soit l'outils qui le fasse au leur place</p>
-                <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode </p>
-            </div>
-        </div>
-    </div>
-    <div id="4" class="ui bottom attached segment">
-        <h1>PlanitPokerStar</h1>
-    </div>
-    <div id="5" class="ui bottom attached segment">
-        <div class="detailsContainer">
-            <h2>Compétences Associés : </h2>
-            <ul>
-                <li>Travailler en mode projet :
-                    <ul>
-                        <li>- Analyser les objectifs et les modalités d’organisation d’un projet</li>
-                        <li>- Planifier les activités</li>
-                        <li>- Évaluer les indicateurs de suivi d’un projet et analyser les écarts</li>
-                    </ul>
-                </li>
-                <li>Développer la présence en ligne de l’organisation :
-                    <ul>
-                        <li>- Participer à l’évolution d’un site Web exploitant les données de l’organisation</li>
-                        <li>- Participer à la valorisation de l’image de l’organisation sur les médias numériques en tenant compte du cadre juridique et des enjeux économiques</li>
-                    </ul>
-                </li>
-
-            </ul>
-        </div>
-        <div class="projetContainerData">
-            <div>
-                <h2>Présentation du projet :</h2>
-                <p>Projet réalisé durant la 2ème année de BTS SIO consistant à réaliser le site d'une école de musique.</p>
-                <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
-                <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
-            </div>
-        </div>
-    </div>
+    </footer>
+</div> <!-- Fermeture div APP-->
+</body>
 </div>
-
-{{> partials/footer}}
+<script src="https://kit.fontawesome.com/9626785de0.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js" integrity="sha512-bHeT+z+n8rh9CKrSrbyfbINxu7gsBmSHlDCb3gUF1BjmjDzKhoKspyB71k0CIRBSjE5IVQiMMVBgCWjF60qsvA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
+<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
+<script src="/js/modal.js" crossorigin="anonymous"></script>
+</html>
 
 <script type="text/javascript" src="/js/projet.js"></script>
 <script>
