--- a/veille.html
+++ b/veille.html
@@ -1,106 +1,188 @@
-{{> partials/header}}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+    </style>
+    <title>Levasseur Kilian</title>
+</head>
 
-<div id="veilleContainer" class="veilleContainer">
-    <div class="ui card">
-        <div class="image">
-            <img src="/img/image.png">
+<div class="main-container">
+    <body>
+    <main>
+        <div id="app">
+            <header>
+                <div class="ui vertical masthead center aligned segment">
+                    <div class="ui container">
+                        <div class="ui segment">
+                            <div class="ui secondary pointing menu">
+                                <a class="item" href="/">
+                                    Accueil
+                                </a>
+                                <div class="right menu">
+                                    <a class="item" href="/projets.html">
+                                        Projets
+                                    </a>
+                                    <a class="item" href="/competences.html">
+                                        Compétences
+                                    </a>
+                                    <a class="item" href="/veille.html">
+                                        Veille informationnelle
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div id="veilleContainer" class="veilleContainer">
+                <div class="ui card">
+                    <div class="image">
+                        <img src="/img/image.png">
+                    </div>
+                    <div class="content">
+                        <a class="header">Kristy</a>
+                        <div class="meta">
+                            <span class="date">Joined in 2013</span>
+                        </div>
+                        <div class="description">
+                            Kristy is an art director living in New York.
+                        </div>
+                        <div onclick="new Modal(
+                            'test',
+                            'Lorem ipsum dolor sit amet,orttitor purus et, sollicitudin augue. Morbi vitae nulla in nunc aliquet aliquam eu quis sem. Nullam suscipit convallis mauris et interdum. Sed sodales nibh quis mattis ultrices. Fusce accumsan imperdiet quam sed ultrices. Integer ut vulputate urna, ac ultricies velit. Aenean varius tellus et ante sollicitudin, eu pretium velit aliquet. Vestibulum non molestie libero, quis molestie nisi. Fusce porta tellus sed diam accumsan finibus.',
+                            '/img/image.png').open()"
+                         class="ui primary button">
+                            Plus de détails
+                        </div>
+                    </div>
+                </div>
+                <div class="ui card">
+                    <div class="image">
+                        <img src="/img/image.png">
+                    </div>
+                    <div class="content">
+                        <a class="header">Kristy</a>
+                        <div class="meta">
+                            <span class="date">Joined in 2013</span>
+                        </div>
+                        <div class="description">
+                            Kristy is an art director living in New York.
+                        </div>
+                        <div class="ui primary button">
+                            Plus de détails
+                        </div>
+                    </div>
+                </div>
+                <div class="ui card">
+                    <div class="image">
+                        <img src="/img/image.png">
+                    </div>
+                    <div class="content">
+                        <a class="header">Kristy</a>
+                        <div class="meta">
+                            <span class="date">Joined in 2013</span>
+                        </div>
+                        <div class="description">
+                            Kristy is an art director living in New York.
+                        </div>
+                        <div class="ui primary button">
+                            Plus de détails
+                        </div>
+                    </div>
+                </div>
+                <div class="ui card">
+                    <div class="image">
+                        <img src="/img/image.png">
+                    </div>
+                    <div class="content">
+                        <a class="header">Kristy</a>
+                        <div class="meta">
+                            <span class="date">Joined in 2013</span>
+                        </div>
+                        <div class="description">
+                            Kristy is an art director living in New York.
+                        </div>
+                        <div class="ui primary button">
+                            Plus de détails
+                        </div>
+                    </div>
+                </div>
+                <div class="ui card">
+                    <div class="image">
+                        <img src="/img/image.png">
+                    </div>
+                    <div class="content">
+                        <a class="header">Kristy</a>
+                        <div class="meta">
+                            <span class="date">Joined in 2013</span>
+                        </div>
+                        <div class="description">
+                            Kristy is an art director living in New York.
+                        </div>
+                        <div class="ui primary button">
+                            Plus de détails
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="modal" class="modalContainer">
+                <div class="modalBody">
+                    <div class="modalHeader">
+                        <h1></h1>
+                        <i onclick="new Modal().close()" class="fa-solid fa-xmark"></i>
+                    </div>
+                    <div class="modalContent">
+                        <img>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+    </main>
+    <footer>
+        <div class="ui inverted vertical footer segment">
+            <div class="ui container">
+                <div class="ui stackable inverted divided equal height stackable grid">
+                    <div class="three wide column">
+                        <h4>A propos</h4>
+                        <div class="ui inverted link list">
+                            <a class="item" href="#ecole-ancre">Notre École</a>
+                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
+                            <a class="item" href="">Rêgles & Confidentialités</a>
+                        </div>
+                    </div>
+                    <div class="three wide column">
+                        <h4>A propos</h4>
+                        <div class="ui inverted link list">
+                            <a class="item" href="#ecole-ancre">Notre École</a>
+                            <a class="item" href="#instrument-ancre">Nos Instruments</a>
+                            <a class="item" href="">Rêgles & Confidentialités</a>
+                        </div>
+                    </div>
+                    <div class="seven wide column">
+                        <h4>E-Music</h4>
+                        <div class="ui list">
+                            <div class="item">Tous droits réservée.</div>
+                            <div class="item">Site Réalisés par Clément H</div>
+                            <div class="item">Co produit par Kilian L</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-            <div onclick="new Modal(
-                'test',
-                'Lorem ipsum dolor sit amet,orttitor purus et, sollicitudin augue. Morbi vitae nulla in nunc aliquet aliquam eu quis sem. Nullam suscipit convallis mauris et interdum. Sed sodales nibh quis mattis ultrices. Fusce accumsan imperdiet quam sed ultrices. Integer ut vulputate urna, ac ultricies velit. Aenean varius tellus et ante sollicitudin, eu pretium velit aliquet. Vestibulum non molestie libero, quis molestie nisi. Fusce porta tellus sed diam accumsan finibus.',
-                '/img/image.png').open()"
-             class="ui primary button">
-                Plus de détails
-            </div>
-        </div>
-    </div>
-    <div class="ui card">
-        <div class="image">
-            <img src="/img/image.png">
-        </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-            <div class="ui primary button">
-                Plus de détails
-            </div>
-        </div>
-    </div>
-    <div class="ui card">
-        <div class="image">
-            <img src="/img/image.png">
-        </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-            <div class="ui primary button">
-                Plus de détails
-            </div>
-        </div>
-    </div>
-    <div class="ui card">
-        <div class="image">
-            <img src="/img/image.png">
-        </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-            <div class="ui primary button">
-                Plus de détails
-            </div>
-        </div>
-    </div>
-    <div class="ui card">
-        <div class="image">
-            <img src="/img/image.png">
-        </div>
-        <div class="content">
-            <a class="header">Kristy</a>
-            <div class="meta">
-                <span class="date">Joined in 2013</span>
-            </div>
-            <div class="description">
-                Kristy is an art director living in New York.
-            </div>
-            <div class="ui primary button">
-                Plus de détails
-            </div>
-        </div>
-    </div>
+    </footer>
+</div> <!-- Fermeture div APP-->
+</body>
 </div>
-<div id="modal" class="modalContainer">
-    <div class="modalBody">
-        <div class="modalHeader">
-            <h1></h1>
-            <i onclick="new Modal().close()" class="fa-solid fa-xmark"></i>
-        </div>
-        <div class="modalContent">
-            <img>
-            <p></p>
-        </div>
-    </div>
-</div>
-{{> partials/footer}}
+<script src="https://kit.fontawesome.com/9626785de0.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js" integrity="sha512-bHeT+z+n8rh9CKrSrbyfbINxu7gsBmSHlDCb3gUF1BjmjDzKhoKspyB71k0CIRBSjE5IVQiMMVBgCWjF60qsvA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
+<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
+<script src="/js/modal.js" crossorigin="anonymous"></script>
+</html>
