--- a/projets.html
+++ b/projets.html
@@ -211,8 +211,7 @@
 <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
 <script src="/js/modal.js" crossorigin="anonymous"></script>
 </html>
-
 <script type="text/javascript" src="/js/projet.js"></script>
 <script>
-    onload(document.getElementById('b'+'{{id}}').classList.add("active"),document.getElementById('{{id}}').style.display="flex");
+    onload(open1())
 </script>
