--- a/projets.html
+++ b/projets.html
@@ -213,5 +213,5 @@
 </html>
 <script type="text/javascript" src="/js/projet.js"></script>
 <script>
-    onload(open1())
+    onload(document.getElementById('1').style.display='flex');
 </script>
