--- a/competences.html
+++ b/competences.html
@@ -83,7 +83,7 @@
                                 <h3>Titre Projet</h3>
                                 <p>Description :</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
+                                <a href="/projets.html?projet=1" class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
                         <div class="projetCard">
