--- a/projets.html
+++ b/projets.html
@@ -217,5 +217,6 @@
     onload(
         projet = URLSearchParams.get('projet'),
         document.getElementById(projet).style.display='flex'
+        document.getElementById('b'+projet).classList.add("active"),
     );
 </script>
