--- a/competences.html
+++ b/competences.html
@@ -114,10 +114,10 @@
                                 <img src="/img/image.png">
                             </div>
                             <div class="descriptionContainer">
-                                <h3>Outils historique visuel d'un site </h3>
+                                <h3>Projet API zaacom</h3>
                                 <p>Description :</p>
-                                <p>Projet consistant à mettre en place un outils qui permet de visualiser l'évolution de l'interface d'un site depuis sa date de création</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
+                                <p>Projet consistant à développer des APIS pour l'entreprise Zaacom</p>
+                                <a href="/projets.html?projet=1" class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
                         <div class="projetCard">
@@ -125,10 +125,21 @@
                                 <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
                             </div>
                             <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
+                                <h3>Projet d'Archivage</h3>
                                 <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a class="tiny ui primary button">En savoir plus</a>
+                                <p>Projet consistant à développer un outil d'archivage permettant de voir l'évolution visuel d'un site client</p>
+                                <a href="/projets.html?projet=2" class="tiny ui primary button">En savoir plus</a>
+                            </div>
+                        </div>
+                        <div class="projetCard">
+                            <div class="imgContainer">
+                                <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
+                            </div>
+                            <div class="descriptionContainer">
+                                <h3>Projet RocketLinks</h3>
+                                <p>Description :</p>
+                                <p>Projet consistant à réaliser le développement d'un outils de gestion de deal rocketlinks pour l'entreprise Zaacom.</p>
+                                <a href="/projets.html?projet=3"  class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -152,21 +163,10 @@
                                 <img src="/img/image.png">
                             </div>
                             <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
+                                <h3>Projet E-Music</h3>
                                 <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
-                            </div>
-                        </div>
-                        <div class="projetCard">
-                            <div class="imgContainer">
-                                <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
-                            </div>
-                            <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
-                                <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a class="tiny ui primary button">En savoir plus</a>
+                                <p>Projet consistant à réaliser le site d'une école de musique.</p>
+                                <a href="/projets.html?projet=5" class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -186,24 +186,13 @@
                                 <img src="/img/image.png">
                             </div>
                             <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
+                                <h3>Projet E-Music</h3>
                                 <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
+                                <p>Projet consistant à réaliser le site d'une école de musique.</p>
+                                <a href="/projets.html?projet=5" class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
-                        <div class="projetCard">
-                            <div class="imgContainer">
-                                <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
-                            </div>
-                            <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
-                                <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a class="tiny ui primary button">En savoir plus</a>
-                            </div>
-                        </div>
-                    </div>
+                </div>
                 </div>
                 <div id="service" class="ui bottom attached segment">
                     <div class="detailsContainer">
@@ -217,24 +206,13 @@
                     <div class="projetContainer">
                         <div class="projetCard">
                             <div class="imgContainer">
-                                <img src="/img/image.png">
-                            </div>
-                            <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
-                                <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a href="/portfolio/projets/2" class="tiny ui primary button">En savoir plus</a>
-                            </div>
-                        </div>
-                        <div class="projetCard">
-                            <div class="imgContainer">
                                 <img src="/img/code-javascript-dans-l-éditeur-de-texte-34208289.jpg">
                             </div>
                             <div class="descriptionContainer">
-                                <h3>Titre Projet</h3>
+                                <h3>Projet d'Archivage</h3>
                                 <p>Description :</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit ante mi, vel gravida nisl finibus vitae. Maecenas sodales condimentum luctus. Nulla tempor sodales venenatis. Fusce feugiat nulla in leo iaculis ultricies. Morbi fringilla laoreet dolor non ultrices. Nullam sed mauris nulla</p>
-                                <a class="tiny ui primary button">En savoir plus</a>
+                                <p>Projet consistant à développer un outil d'archivage permettant de voir l'évolution visuel d'un site client</p>
+                                <a href="/projets.html?projet=2" class="tiny ui primary button">En savoir plus</a>
                             </div>
                         </div>
                     </div>
