--- a/projets.html
+++ b/projets.html
@@ -132,6 +132,7 @@
                             <p>L'outils a pour but de permettre aux consultant SEO de gagner temps, afin qu'ils évitent de faire eux mêmes la gestion de leurs deals rocketlinks, et que se soit l'outils qui le fasse au leur place</p>
                             <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode </p>
                         </div>
+                        <h2>Preuves du projet :</h2>
                         <div class="preuveContainer">
                             <div>
                                 <a href="/pdf/RocketLinks.pdf">Objectifs du projet</a>.
