--- a/projets.html
+++ b/projets.html
@@ -134,10 +134,10 @@
                         </div>
                         <h2>Preuves du projet :</h2>
                         <div class="preuveContainer">
-                            <div>
+                            <div class="buttonPreuve">
                                 <a href="/pdf/RocketLinks.pdf">Objectifs du projet</a>.
                             </div>
-                            <div>
+                            <div class="buttonPreuve">
                                 <a href="/pdf/RocketLinks2.pdf">Diagramme des taches</a>.
                             </div>
                             <div>
