--- a/projets.html
+++ b/projets.html
@@ -128,9 +128,9 @@
                         <div>
                             <h2>Présentation du projet :</h2>
                             <p>Projet réalisé durant le stage de 2eme année de BTS SIO consistant à réaliser le développement d'un outils de gestion de deal rocketlinks pour l'entreprise Zaacom.</p>
-                            <p>RocketLinks c'est la première plateforme d’achat / vente de liens et d’articles sponsorisés qui propose à ses clients près de 35 000 médias </p>
-                            <p>L'outils a pour but de permettre aux consultant SEO de gagner temps, afin qu'ils évitent de faire eux mêmes la gestion de leurs deals rocketlinks, et que se soit l'outils qui le fasse au leur place</p>
-                            <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode </p>
+                            <p>RocketLinks c'est la première plateforme d’achat / vente de liens et d’articles sponsorisés qui propose à ses clients près de 35 000 médias. </p>
+                            <p>L'outils a pour but de permettre aux consultant SEO de gagner temps, afin qu'ils évitent de faire eux mêmes la gestion de leurs deals rocketlinks, et que ce soit l'outil qui le fasse au leur place.</p>
+                            <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration pour m'assurer du fonctionnement de chaque méthode. </p>
                         </div>
                         <h2>Preuves du projet :</h2>
                         <div class="preuveContainer">
