--- a/projets.html
+++ b/projets.html
@@ -75,9 +75,20 @@
                             <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'APIs pour l'entreprise Zaacom.</p>
                             <p>Développement des APIs WHOIS, Wayback, Majestic et Semrush</p>
                             <p>- L'API WHOIS sert à récupérer les informations d'un nom de domaine (date d’enregistrement, nom de la société, mail, adresse…)</p>
-                            <p>- L'API Wayback sert à récupérer les captures d'écran d'un site web</p>
+                            <p>- L'API Wayback sert à récupérer les captures d'écran d'un site web à une date voulue</p>
                             <p>- L'API Majestic sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
                             <p>- L'API Semrush sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
+                        </div>
+                        <div class="preuveContainer">
+                            <div>
+                                <img src="img/api1.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/api2.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/api3.png"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -102,8 +113,16 @@
                         <div>
                             <h2>Présentation du projet :</h2>
                             <p>Projet réalisé durant le stage de 1er année de BTS SIO consistant à réaliser le développement d'un outils d'archivage de l'interface de site client pour l'entreprise Zaacom.</p>
-                            <p>L'outils a pour but de permettre l'analyse de l'évolution de l'interface d'un site web</p>
+                            <p>L'outils a pour but de permettre aux consultants de repérer rapidement si un site a subi une refonte ou si le nom de domaine a été racheter</p>
                             <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration dans les apis Wayback et WHOIS afin de vérifier si elles effectuent bien leurs tâches étant donné que cet outils utilise ces deux apis</p>
+                        </div>
+                    </div>
+                    <div class="preuveContainer">
+                        <div>
+                            <img src="img/unnamed.png"></img>
+                        </div>
+                        <div>
+                            <img src="img/unnamed2.png"></img>
                         </div>
                     </div>
                 </div>
@@ -143,7 +162,6 @@
                             <div>
                                 <img src="img/rocketlinks.png"></img>
                             </div>
-
                         </div>
                     </div>
                 </div>
