add preuve e-music

--- a/projets.html
+++ b/projets.html
@@ -195,6 +195,41 @@
                             <p>Le site est développé pour les membres de l'école de musique afin qu'il puisse s'incrire à court de musique, acccéder à leur planning...</p>
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
+                        <div class="preuveContainer">
+                            <div>
+                                <img src="img/"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_2.png.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_5.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_6.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_7.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_8.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_10.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_11.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/e-music2.png"></img>
+                            <div>
+                                <img src="img/a2eb42db-1d52-4c62-874f-3c3f21196344.png"></img>
+                            </div>
+                            <div>
+                                <img src="img/Screenshot_9.png"></img>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
