--- a/projets.html
+++ b/projets.html
@@ -196,39 +196,39 @@
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
-                            <div>
+                            <div id="img1">
                                 <img src="img/"></img>
                             </div>
-                            <div>
+                            <div id="img2">
                                 <img src="img/Screenshot_2.png.png"></img>
                             </div>
-                            <div>
+                            <div id="img3">
                                 <img src="img/Screenshot_5.png"></img>
                             </div>
-                            <div>
+                            <div id="img4">
                                 <img src="img/Screenshot_6.png"></img>
                             </div>
-                            <div>
+                            <div id="img5">
                                 <img src="img/Screenshot_7.png"></img>
                             </div>
-                            <div>
+                            <div id="img6">
                                 <img src="img/Screenshot_8.png"></img>
                             </div>
-                            <div>
+                            <div id="img7">
                                 <img src="img/Screenshot_10.png"></img>
                             </div>
-                            <div>
+                            <div id="img8">
                                 <img src="img/Screenshot_11.png"></img>
                             </div>
-                            <div>
+                            <div id="img9">
                                 <img src="img/e-music2.png"></img>
-                            <div>
+                            <div id="img10">
                                 <img src="img/a2eb42db-1d52-4c62-874f-3c3f21196344.png"></img>
                             </div>
-                            <div>
+                            <div id="img11">
                                 <img src="img/Screenshot_9.png"></img>
                             </div>
-
+                            <button onclick="num++">Suivant</button>
                         </div>
                     </div>
                 </div>
