--- a/projets.html
+++ b/projets.html
@@ -196,7 +196,7 @@
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
-                            <button onclick="num++">Suivant</button>
+                            <button onclick="()=>num++; console.log(num)">Suivant</button>
                             <div id="img1">
                                 <img src="img/"></img>
                             </div>
