--- a/projets.html
+++ b/projets.html
@@ -223,6 +223,7 @@
                             </div>
                             <div id="img9">
                                 <img src="img/e-music2.png"></img>
+                            </div>
                             <div id="img10">
                                 <img src="img/a2eb42db-1d52-4c62-874f-3c3f21196344.png"></img>
                             </div>
