--- a/projets.html
+++ b/projets.html
@@ -198,39 +198,35 @@
                         <div class="preuveContainer">
                             <button onclick="img()">Suivant</button>
                             <div id="img1">
-                                <img src="img/"></img>
+                                <img src="img/emusic.png"></img>
                             </div>
                             <div id="img2">
-                                <img src="img/Screenshot_2.png.png"></img>
+                                <img src="img/emusic2.png"></img>
                             </div>
                             <div id="img3">
-                                <img src="img/Screenshot_5.png"></img>
+                                <img src="img/emusic3.png"></img>
                             </div>
                             <div id="img4">
-                                <img src="img/Screenshot_6.png"></img>
+                                <img src="img/emusic4.png"></img>
                             </div>
                             <div id="img5">
-                                <img src="img/Screenshot_7.png"></img>
+                                <img src="img/emusic5.png"></img>
                             </div>
                             <div id="img6">
-                                <img src="img/Screenshot_8.png"></img>
+                                <img src="img/emusic6.png"></img>
                             </div>
                             <div id="img7">
-                                <img src="img/Screenshot_10.png"></img>
+                                <img src="img/emusic7.png"></img>
                             </div>
                             <div id="img8">
-                                <img src="img/Screenshot_11.png"></img>
+                                <img src="img/emusic8.png"></img>
                             </div>
                             <div id="img9">
-                                <img src="img/e-music2.png"></img>
+                                <img src="img/emusic9.png"></img>
                             </div>
                             <div id="img10">
                                 <img src="img/a2eb42db-1d52-4c62-874f-3c3f21196344.png"></img>
                             </div>
-                            <div id="img11">
-                                <img src="img/Screenshot_9.png"></img>
-                            </div>
-
                         </div>
                     </div>
                 </div>
