--- a/projets.html
+++ b/projets.html
@@ -80,13 +80,14 @@
                             <p>- L'API Semrush sert à récupérer les informations d'un site web (nombre de backlinks, nombre de pages indexées, nombre de mots clés…)</p>
                         </div>
                         <div class="preuveContainer">
-                            <div>
+                            <div onclick="img2()" class="buttonPreuve">Preuves suivantes</div>
+                            <div class="imgHide" id="img21">
                                 <img src="img/api1.png"></img>
                             </div>
-                            <div>
+                            <div class="imgHide" id="img22">
                                 <img src="img/api2.png"></img>
                             </div>
-                            <div>
+                            <div class="imgHide" id="img23">
                                 <img src="img/api3.png"></img>
                             </div>
                         </div>
@@ -196,35 +197,35 @@
                             <p>Pour le développement on a donc utilisé la méthode de gestion de projet SCRUM, où on a réfléchit aux fonctionnalités en définicent les taches et les critères d'aceptation. Puis on a mis en place de sprint pour ce concentrer que sur certaines parties du projet et être efficace</p>
                         </div>
                         <div class="preuveContainer">
-                            <button onclick="img()">Suivant</button>
-                            <div id="img1">
+                            <div onclick="img()" class="buttonPreuve">Preuves suivantes</div>
+                            <div class="imgHide" id="img1">
                                 <img src="img/emusic.png"></img>
                             </div>
-                            <div id="img2">
+                            <div class="imgHide" id="img2">
                                 <img src="img/emusic2.png"></img>
                             </div>
-                            <div id="img3">
+                            <div class="imgHide" id="img3">
                                 <img src="img/emusic3.png"></img>
                             </div>
-                            <div id="img4">
+                            <div class="imgHide" id="img4">
                                 <img src="img/emusic4.png"></img>
                             </div>
-                            <div id="img5">
+                            <div class="imgHide" id="img5">
                                 <img src="img/emusic5.png"></img>
                             </div>
-                            <div id="img6">
+                            <div class="imgHide" id="img6">
                                 <img src="img/emusic6.png"></img>
                             </div>
-                            <div id="img7">
+                            <div class="imgHide" id="img7">
                                 <img src="img/emusic7.png"></img>
                             </div>
-                            <div id="img8">
+                            <div class="imgHide" id="img8">
                                 <img src="img/emusic8.png"></img>
                             </div>
-                            <div id="img9">
+                            <div class="imgHide" id="img9">
                                 <img src="img/emusic9.png"></img>
                             </div>
-                            <div id="img10">
+                            <div class="imgHide" id="img10">
                                 <img src="img/a2eb42db-1d52-4c62-874f-3c3f21196344.png"></img>
                             </div>
                         </div>
