--- a/projets.html
+++ b/projets.html
@@ -118,10 +118,11 @@
                             <p>Pour le développement j'ai donc suivit les critères qui m'étaient imposés. De plus j'ai du réaliser des tests d'intégration dans les apis Wayback et WHOIS afin de vérifier si elles effectuent bien leurs tâches étant donné que cet outils utilise ces deux apis</p>
                         </div>
                         <div class="preuveContainer">
-                            <div>
+                            <div onclick="img3()" class="buttonPreuve">Preuves suivantes</div>
+                            <div class="imgHide" id="img31">
                                 <img src="img/unnamed.png"></img>
                             </div>
-                            <div>
+                            <div class="imgHide" id="img32">
                                 <img src="img/unnamed2.png"></img>
                             </div>
                         </div>
