--- a/projets.html
+++ b/projets.html
@@ -119,10 +119,10 @@
                         </div>
                         <div class="preuveContainer">
                             <div onclick="img3()" class="buttonPreuve">Preuves suivantes</div>
-                            <div class="imgHide" id="img31">
+                            <div class="imgHide3" id="img31">
                                 <img src="img/unnamed.png"></img>
                             </div>
-                            <div class="imgHide" id="img32">
+                            <div class="imgHide3" id="img32">
                                 <img src="img/unnamed2.png"></img>
                             </div>
                         </div>
